--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body * {
   max-width: 1355px;
   margin: 0 auto;
   font-family: 'Caveat Brush', cursive;
-  font-size: 19px;
+  font-size: 13pt;
 }
 .title-screen {
   width: 1350px;
@@ -32,6 +32,7 @@ body * {
   background-color: #616161;
   color: #fff;
   z-index: 100;
+  opacity:0.9;
 }
 .left {
   display: flex;
@@ -79,20 +80,47 @@ p {
   align-items: center;
   flex-wrap: nowrap;
   height: 600px;
-  margin: 35px;
+  margin: 10px;
 }
-rooms-container {
-/*   flex-grow: 1 1 1;
-  flex-basis: 100px;
-  flex-shrink: 1 1 1;
-  align-self: auto;
-  order: initial; */
+/* rooms-container {
   width: 150px;
   height: 200px;
   margin-left: 30px;
   margin-right: 30px;
   text-decoration: none;
 }
+ */
+.rooms-container-lux {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin: 10px 60px 0px 80px;
+  padding: 5px 5px 5px 5px;
+}
+
+.rooms-container-lux-text {
+
+}
+
+.rooms-container-semilux {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin: 10px 50px 0px 70px;
+  padding: 5px 5px 5px 5px;
+}
+
+.rooms-container-ordinary {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin: 10px 50px 0px 50px;
+  padding: 5px 5px 5px 5px;
+}
+
 .rooms-img {
   width: 300px;
   height: 300px;
@@ -146,6 +174,16 @@ rooms-container {
   height: 350px;
 }
 
+.title-footer {
+  margin:0 auto;
+  width:130px;
+  height:60px;
+  padding-top: 35px;
+  padding-bottom: 10px;
+  font-size: 40px;
+  color: #37474F;
+}
+
 #contact {
   display: flex;
   flex-direction: row;
@@ -154,18 +192,18 @@ rooms-container {
 }
 
 .map-berd {
-  margin: 50px 50px 50px 50px;
+  margin: 110px 20px 10px 50px;
 }
 
 .map {
-  width: 700px;
-  height: 400px;
+  width: 750px;
+  height: 490px;
 }
 
 form {
   width: 400px;
-  height: 540px;
-  margin: 40px 50px;
+  height: 489px;
+  margin: 110px 50px 20px 20px;
   padding: 12px 12px 24px 21px;
   border-radius: 20px;
   box-shadow: 0 0 10px #cccccc;
@@ -177,15 +215,11 @@ fieldset{
   border: 1px solid black;
   border-radius: 5px;
   padding: 10px;
-}
-
-p[fieldset] {
-  display: block;
-  margin-bottom: 1px;
+  font-size: 14px;
 }
 
 input, textarea {
-  width: 300px;
+  width: 356px;
   border-radius: 5px;
   border-color: #616161;
   padding: 10px 13px;
@@ -196,12 +230,25 @@ input, textarea {
   width: 175px;
   height: 35px;
   border: 1px solid #78909C;
-  border-radius: 12px;
+  border-radius: 5px;
   border-color: #616161;
-  margin: 3px 9px 0px 125px;
+  margin: 6px 9px 0px 182px;
   padding: 3px 6px 0px 0px;
 }
 
+footer {
+  max-width: 1355px;
+  flex-direction: row;
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  height: 45px;
+  background-color: #616161;
+  color: #fff;
+}
 
-
+.footer {
+  align-content: center;
+  padding: 10px 350px;
+}
 
