--- a/styles.css
+++ b/styles.css
@@ -1,258 +1,86 @@
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  text-decoration: none;
-}
-body * {
-  max-width: 1355px;
-  margin: 0 auto;
-  font-family: 'Caveat Brush', cursive;
-  font-size: 13pt;
-}
-.title-screen {
-  width: 1350px;
-  height: 655px;
-  position: relative;
-}
-.header {
-  height: 80px;
-  position: absolute;
-  top: 0px;
-}
-.bar {
-  position: fixed;
-  width: 100%;
-  height: inherit;
-  display: flex;
-  padding: 0 20px;
-  font-size: 25px;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #616161;
-  color: #fff;
-  z-index: 100;
-  opacity:0.9;
-}
-.left {
-  display: flex;
-  align-items: center;
-  cursor: pointer,
-}
-.right {
-  display: flex;
-  align-items: center;
+nav {
+  opacity: 0.98;
 }
 
-.navigation li {
-  display: inline;
-  padding-left: 12px;
-  padding-right: 12px;
-  color: lightgray;
-  font-size: 22px;
+hr {
+  padding: 5px 0px;
+  margin-top: 40px;
 }
 
-li a {
-  color: inherit;
-  font-size: inherit;
-  text-decoration: none;
-}
-
-.link, .link:hover, link:active, .link:visited {
-  text-decoration: none;
-  color: inherit;
-}
-
-.logotype {
-  width: 230px;
-  top: 0px;
-  padding-top: 0px;
-  margin-right: 10px;
-  margin-top: 2px;
-}
-.title {
-  margin:0 auto;
-  width:130px;
-  height:60px;
-  padding-top: 20px;
-  padding-bottom: 55px;
-  font-size: 40px;
-  color: #37474F;
-}
-.headnote {
-  margin: 15px 40px 35px 50px;
-
-}
-p {
-  color: #616161;
-}
-.section-rooms {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: nowrap;
-  height: 600px;
-  margin: 0px;
-}
-/* rooms-container {
-  width: 150px;
-  height: 200px;
-  margin-left: 30px;
-  margin-right: 30px;
-  text-decoration: none;
-}
- */
-.rooms-container {
-  width: 350px;
-  height: 560px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  margin: 0px 70px 0px 70px;
-  /* border: 5px dashed black; */
-}
-
-.rooms-img {
-  width: 300px;
-  height: 300px;
-}
-
-.category-description {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 5;
-  -webkit-box-orient: vertical;
-  width: 310px;
-}
-
-.price {
-  margin: 10px 624px 10px;
-  width:130px;
-  height:60px;
-  padding: 5px 5px;
-  border-radius: 5px;
-}
-.title-berdyansk {
-  margin:0 auto;
-  width:130px;
-  height:60px;
-  padding-top: 20px;
-  padding-bottom: 110px;
-  font-size: 40px;
-  color: #37474F;
-}
-
-.comfortable-berd {
-  margin: 35px 18px 35px 40px;
-}
-
-#video-berd {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  margin: 0px 0px;
-}
-
-#video-summer-berd {
-  flex-wrap: nowrap;
-  margin: 20px 20px 20px 20px;
-}
-
-.video-summer {
+video {
   width: 600px;
   height: 350px;
-}
-
-#video-types-berd {
-  flex-wrap: nowrap;
-  margin: 20px 20px 20px 20px;
-}
-
-.video-types {
-  width: 600px;
-  height: 350px;
-}
-
-.contacts-title {
-  text-align: center;
-  width:130px;
-  height:60px;
-  padding-top: 35px;
-  padding-bottom: 1px;
-  font-size: 40px;
-  color: #37474F;
-}
-
-#contact-form {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: stretch;
-  padding-bottom: 18px;
-}
-
-.map-berd {
-  margin: 72px 20px 10px 50px;
-}
-
-.map {
-  width: 750px;
-  height: 490px;
-}
-
-form {
-  width: 400px;
-  height: 489px;
-  margin: 72px 50px 20px 20px;
-  padding: 12px 12px 24px 21px;
-  border-radius: 20px;
-  box-shadow: 0 0 10px #cccccc;
-}
-
-fieldset{
-  min-width: 30px;
-  margin: 0 auto;
-  border: 1px solid black;
-  border-radius: 5px;
-  padding: 10px;
-  font-size: 14px;
-}
-
-input, textarea {
-  width: 356px;
-  border-radius: 5px;
-  border-color: #616161;
-  padding: 10px 13px;
-}
-
-
-.push-button {
-  width: 175px;
-  height: 35px;
-  border: 1px solid #78909C;
-  border-radius: 5px;
-  border-color: #616161;
-  margin: 6px 9px 0px 182px;
-  padding: 3px 6px 0px 0px;
+  padding: 18px;
 }
 
 footer {
-  max-width: 1355px;
-  flex-direction: row;
-  display: flex;
-  justify-content: center;
-  align-items: baseline;
-  height: 45px;
-  background-color: #616161;
+  background-color: #2d2d2d;
   color: #fff;
-}
-
-.footer {
   text-align: center;
-  padding: 10px 350px;
+  padding: 10px;
 }
 
+.navbar {
+  min-height: 68px;
+}
+
+.navbar-right {
+  padding-top: 8px;
+}
+
+.navbar-brand {
+  padding: 6px 15px;
+}
+
+.navbar-nav>li>a {
+  font-size: 18px;
+}
+
+.logo {
+  width: 176px;
+}
+
+.title-screen {
+  width: 100%;
+}
+
+.jumbotron {
+  background-color: #fff;
+  padding: 0px;
+  margin-bottom: 0px;
+}
+
+.title {
+  text-align: center;
+  padding: 15px 0px;
+}
+
+.content {
+  text-align: center;
+  padding: 15px 0px;
+}
+
+.carousel.slide {
+  padding: 15px 0px;
+}
+
+.submit-btn {
+  margin-top: 15px;
+  float: right;
+}
+
+.form-control {
+  margin: 8px 0;
+}
+
+panel-heading {
+  text-align: center;
+}
+
+.contacts-container {
+  padding: 15px 0px;
+}
+
+.text-muted {
+  margin: 0 0 2px;
+}
