Added more changes

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,16 @@
+body * {
+  max-width: 1355px;
+  margin: 0 auto;
+  font-family: 'Indie Flower', cursive;
+  font-size: 13pt;
+}
+
 nav {
-  opacity: 0.98;
+  opacity: 0.85;
+}
+
+p {
+  color: #616161;
 }
 
 hr {
@@ -53,11 +64,16 @@ footer {
 .title {
   text-align: center;
   padding: 15px 0px;
+  font-size: 22pt;
 }
 
 .content {
   text-align: center;
   padding: 15px 0px;
+}
+
+.caption {
+  text-align: center;
 }
 
 .carousel.slide {
@@ -66,11 +82,16 @@ footer {
 
 .submit-btn {
   margin-top: 15px;
+  margin-left: 11px;
   float: right;
 }
 
+address {
+  margin-top: 15px;
+}
+
 .form-control {
-  margin: 8px 0;
+  margin: 16px 0;
 }
 
 panel-heading {
